added title to header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>LetsEat Mailing List</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1 class="title">LetsEat</h1>
+      <p class="goal">
+        At LetsEat, our goal is to make home-cooked meals easy, affordable, and
+        sustainable.
+      </p>
+    </header>
     <main>
       <section id="mailing-list"></section>
       <section id="mission"></section>
