added scroll to mailing list button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         At LetsEat, our goal is to make home-cooked meals easy, affordable, and
         sustainable.
       </p>
+      <button class="mailing-list-button">Join Mailing List</button>
     </header>
     <main>
       <section id="mailing-list"></section>
