added scroll arrow, scroll arrow animation, and responsive background

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         sustainable.
       </p>
       <button class="mailing-list-button">Join Mailing List</button>
+      <div class="arrow">
+        <div class="line"></div>
+        <span class="head"></span>
+      </div>
     </header>
     <main>
       <section id="mailing-list"></section>
