updated logo and favicon

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oregano&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
     <title>LetsEat Mailing List</title>
   </head>
   <body>
     <header>
-      <h1 class="title">LetsEat</h1>
+      <img src="public/logo.svg" class="title" />
       <p class="goal">
         At LetsEat, our goal is to make home-cooked meals easy, affordable, and
         sustainable.
