added solutions section contents

--- a/index.html
+++ b/index.html
@@ -63,7 +63,65 @@
         </div>
       </section>
       <section id="solutions">
-        <div class="container"></div>
+        <div class="container">
+          <div class="solution">
+            <div class="solution-header">
+              <div class="solution-icon-container solution-icon-local">
+                <img
+                  src="public/local-icon.svg"
+                  id="local"
+                  alt="an illustration of a carrot and bellpepper with a location marker"
+                  class="solution-icon"
+                />
+              </div>
+              <h3 class="solution-name">Local</h3>
+            </div>
+            <p class="solution-text">
+              We buy produce directly from farms near you through
+              community-supported agriculture (CSA’s).
+            </p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="solution">
+            <div class="solution-header">
+              <div class="solution-icon-container solution-icon-fresh">
+                <img
+                  src="public/fresh-icon.svg"
+                  alt="a hand holding fresh picked produce"
+                  id="fresh"
+                  class="solution-icon"
+                />
+              </div>
+              <h3 class="solution-name">Fresh</h3>
+            </div>
+            <p class="solution-text">
+              We deliver directly from the farm to your door, cutting out
+              distribution centers and grocery stores giving you the freshest
+              food possible.
+            </p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="solution">
+            <div class="solution-header">
+              <div class="solution-icon-container solution-icon-fast">
+                <img
+                  src="public/fast-icon.svg"
+                  id="fast"
+                  alt="a timer with lines indicating speed"
+                  class="solution-icon"
+                />
+              </div>
+              <h3 class="solution-name">Fast</h3>
+            </div>
+            <p class="solution-text">
+              For people learning to cook or someone with a busy schedule, we
+              provide a meal plan for the week using the produce we deliver each
+              week.
+            </p>
+          </div>
+        </div>
       </section>
       <section id="contact-us">
         <div class="container"></div>
