added contact us html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,33 @@
         </div>
       </section>
       <section id="contact-us">
-        <div class="container"></div>
+        <div class="container">
+          <p class="contact-us-text">
+            We would love to hear from you. Here is how to get in touch with us
+          </p>
+          <div class="contact-method">
+            <div class="contact-method-header">
+              <img
+                src="public/email.svg"
+                alt="an unopened letter"
+                class="contact-method-icon"
+              />
+              <p class="contact-method-type">Email</p>
+            </div>
+            <a href="mailto:adaptsolutionstech@gmail.com" class="contact-link">adaptsolutionstech@gmail.com</a>
+          </div>
+          <div class="contact-method">
+            <div class="contact-method-header">
+              <img
+                src="public/phone.svg"
+                alt="a telephone"
+                class="contact-method-icon"
+              />
+              <p class="contact-method-type">Phone</p>
+            </div>
+            <a href="tel:425-503-5202" class="contact-link">(425) 503 - 5202</a>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
