--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
       <section id="solutions">
         <div class="container">
-          <div class="solution">
+          <div id="solution-1" class="solution">
             <div class="solution-header">
               <div class="solution-icon-container solution-icon-local">
                 <img
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="container">
-          <div class="solution">
+          <div id="solution-2" class="solution">
             <div class="solution-header">
               <div class="solution-icon-container solution-icon-fresh">
                 <img
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="container">
-          <div class="solution">
+          <div id="solution-3" class="solution">
             <div class="solution-header">
               <div class="solution-icon-container solution-icon-fast">
                 <img
@@ -137,7 +137,9 @@
               />
               <p class="contact-method-type">Email</p>
             </div>
-            <a href="mailto:adaptsolutionstech@gmail.com" class="contact-link">adaptsolutionstech@gmail.com</a>
+            <a href="mailto:adaptsolutionstech@gmail.com" class="contact-link"
+              >adaptsolutionstech@gmail.com</a
+            >
           </div>
           <div class="contact-method">
             <div class="contact-method-header">
