--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900"
+      href="https://fonts.googleapis.com/css2?family=Merriweather&Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
@@ -15,8 +15,10 @@
   </head>
   <body>
     <header>
+      <img width="0" height="0" src="public/clip-path.svg" alt="" />
       <div class="container">
-        <img src="public/logo.svg" class="title" />
+        <img src="public/logo.svg" class="logo" />
+        <h1 class="title">Lets Eat</h1>
         <p class="goal">
           At LetsEat, our goal is to make home-cooked meals easy, affordable,
           and sustainable.
@@ -155,7 +157,12 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <span class="footer-name">LetsEat</span>
+      <a href="mailto:adaptsolutionstech@gmail.com" class="footer-link"
+        >adaptsolutionstech@gmail.com</a
+      >
+    </footer>
     <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
     <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
     <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
