--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-MTNXG0EYV4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-MTNXG0EYV4");
+    </script>
     <title>LetsEat Mailing List</title>
   </head>
   <body>
